services增加方法，json判斷有沒有下架